<resources>
    <string name="app_name">Scanner</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_camera_interface">CameraInterface</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="begin_scanning">Begin Scanning</string>
    <string name="lastfour_placeholder">0000</string>
    <string name="jsonImportError">No manifest loaded.\n\nPlease perform application sync.</string>
    <string name="ready">Ready</string>
    <string name="xdt_data_file">xdt_mobile.json</string>
    <string name="resume_scanning">Resume Scanning</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="scan">SCAN</string>
    <string name="gtin">GTIN</string>
    <string name="qty">Qty</string>
    <string name="back">Back</string>
    <string name="stop">Stop</string>
    <string name="high_risk">High-Risk</string>
    <string name="sync">Sync</string>
    <string name="selected_manifest">Select Manifest:</string>
    <string name="force_scanner_copy">Force Scanner Copy</string>
    <string name="enter_barcode">enter barcode</string>
    <string name="xdt_data_temp_file">xdt_temp.json</string>
    <string name="torch">Torch</string>
    <string name="mark_missing">Mark SSCC as missing</string>
    <string name="xdt_update_file">update.apk</string>
</resources>