<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?android:attr/colorBackground"
    android:visibility="visible">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_create_carton"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Create Extra SSCC" />

    <Button
        android:id="@+id/extra_sscc_button_save"
        android:layout_width="72dp"
        android:layout_height="0dp"
        android:gravity="center"
        app:icon="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toBottomOf="@+id/tb_create_carton"
        app:layout_constraintEnd_toEndOf="@id/tb_create_carton"
        app:layout_constraintTop_toTopOf="@+id/tb_create_carton"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/entry_article_gtin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:defaultFocusHighlightEnabled="true"
        android:ems="14"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:focusedByDefault="true"
        android:hint="@string/gtin"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_create_carton"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_scan_gtin"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:text="@string/scan"
        app:layout_constraintLeft_toRightOf="@id/entry_article_gtin"
        app:layout_constraintTop_toTopOf="@+id/entry_article_gtin"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/entry_article_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:ems="4"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/qty"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/entry_article_gtin"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btn_add_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="@+id/btn_scan_gtin"
        app:layout_constraintTop_toTopOf="@+id/entry_article_qty"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/extra_sscc_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_weight="0"
        android:text="@android:string/cancel"
        app:layout_constraintEnd_toStartOf="@id/btn_add_article"
        app:layout_constraintTop_toTopOf="@+id/entry_article_qty"
        tools:ignore="TextContrastCheck" />

    <ScrollView
        android:id="@+id/article_text_scrollview"
        android:layout_width="0dp"
        android:layout_height="256dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/entry_article_qty">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_article_list"
                android:layout_width="378dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:padding="8dp"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/codescanner_gtin"
        android:layout_width="0dp"
        android:layout_height="256dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/article_text_scrollview"
        app:layout_constraintEnd_toEndOf="@+id/article_text_scrollview"
        app:layout_constraintStart_toStartOf="@id/article_text_scrollview"
        app:layout_constraintTop_toTopOf="@id/article_text_scrollview" />

    <CheckBox
        android:id="@+id/cb_HR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/high_risk"
        app:layout_constraintStart_toEndOf="@+id/entry_article_qty"
        app:layout_constraintTop_toTopOf="@+id/entry_article_qty" />

</androidx.constraintlayout.widget.ConstraintLayout>