<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScannerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="255"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tb_text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="monospace"
                    android:textColor="?android:attr/textColorPrimaryInverseNoDisable"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/save"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_dataList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:padding="8dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tx_statusBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="#CCCCCC"
            android:fontFamily="monospace"
            android:paddingHorizontal="16dp"
            android:text="@string/ready"
            android:textColor="#455A64" />

    </LinearLayout>

    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/codeScanner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:autoFocusButtonColor="@android:color/white"
        app:autoFocusButtonVisible="true"
        app:flashButtonColor="@android:color/white"
        app:flashButtonVisible="true"
        app:frameAspectRatioHeight="1"
        app:frameAspectRatioWidth="3"
        app:frameColor="@android:color/white"
        app:frameCornersRadius="6dp"
        app:frameCornersSize="32dp"
        app:frameSize="0.9">

    </com.budiyev.android.codescanner.CodeScannerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabScan"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="337dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="338dp"
        android:alpha=".3"
        android:clickable="true"
        android:contentDescription="@string/scan_barcode"
        android:minWidth="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@android:string/cancel"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        tools:ignore="SpeakableTextPresentCheck" />

    <View
        android:id="@+id/view_darken_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_overlay"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:focusedByDefault="false"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>